erDiagram
    USERS ||--o{ SALES : records
    SALES ||--|{ SALE_ITEMS : contains
    PRODUCTS ||--o{ SALE_ITEMS : referenced_by

    USERS {
        int id PK
        string name
        string email
        string password
        string role
    }

    PRODUCTS {
        int id PK
        string name
        string category
        float price
        int stock
        string barcode
        string image
    }

    SALES {
        int id PK
        float total
        float subtotal
        string paymentMethod
        string receipt_number
        string createdAt
        int user_id FK
        string discount_type
        float discount_value
        float discount_amount
        float tax_rate
        float tax_amount
        float amount_tendered
        float change_amount
        string status
        string sale_channel
        string voidedAt
        string fulfillment_type
        string customer_name
        string customer_phone
        string customer_email
        string delivery_address
        string payment_reference
        string payment_last4
    }

    SALE_ITEMS {
        int id PK
        int sale_id FK
        int product_id FK
        string product_name
        int quantity
        float price
        float line_total
    }
